# IMU_Preintegration

./: CMakeLists.txt  IMU_Preintegration.h  IMU_factor.h  README.md  dir_imu_pose.txt  draw_error.py  draw_trajcory.py  imu_int_pose_noise.txt  imu_pose_noise.txt  math_preintegration.h  pre_imu_pose.txt  test_preintegration.cpp  vision_pose.txt
data_gen/: gener_alldata.cpp  imu_pose.txt  imu_pose_noise.txt  integration_error.txt  integration_pose.txt  preintegration_error.txt  preintegration_pose.txt  vision_pose.txt
data_gen/src/: imu.cpp  imu.h  param.h  utilities.cpp  utilities.h
